# pngia-codex

./: .gitignore  LICENSE  README.md  README_en.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: create_agent.py  test_agent.py  test_full_pipeline.py  test_pixel4d.py  verify_agent.py
src/: __init__.py  agent.py  pixel4d.py  pngia.py  registry.py
tests/: test_agent_integration.py  test_full_pipeline.py  test_smoke.py
